// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PostBodyAdditionalContent with a YouTube video should not render content when isEmbedVisible is false 1`] = `
<div>
  <div>
    <button
      aria-label="Toggle Embed Visibility"
      class="style--none post__embed-visibility color--link pull-left"
      data-expanded="false"
    />
    <span>
      some children
    </span>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent with a YouTube video should render correctly 1`] = `
<div>
  <div>
    <button
      aria-label="Toggle Embed Visibility"
      class="style--none post__embed-visibility color--link pull-left"
      data-expanded="true"
    />
    <span>
      some children
    </span>
    <div
      data-testid="youtube-video"
    />
  </div>
</div>
`;

exports[`PostBodyAdditionalContent with a YouTube video should render the toggle after a message containing more than just a link 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
    <button
      aria-label="Toggle Embed Visibility"
      class="style--none post__embed-visibility color--link "
      data-expanded="true"
    />
    <div
      data-testid="youtube-video"
    />
  </div>
</div>
`;

exports[`PostBodyAdditionalContent with a message attachment should render correctly 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
    <div
      data-testid="message-attachment-list"
    />
  </div>
</div>
`;

exports[`PostBodyAdditionalContent with a normal link Should render nothing if the plugin matches but isEmbedVisible is false 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent with a normal link Should render nothing if the registered plugins don't match 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent with a normal link Should render the plugin component if it matches and is not toggeable 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
    <div
      data-testid="embed-mp3"
    />
  </div>
</div>
`;

exports[`PostBodyAdditionalContent with a normal link Should render the plugin component if it matches and is toggeable 1`] = `
<div>
  <div>
    <button
      aria-label="Toggle Embed Visibility"
      class="style--none post__embed-visibility color--link pull-left"
      data-expanded="true"
    />
    <span>
      some children
    </span>
    <div
      data-testid="embed-mp3"
    />
  </div>
</div>
`;

exports[`PostBodyAdditionalContent with a permalinklink Render permalink preview 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
    <div
      data-testid="post-message-preview"
    />
  </div>
</div>
`;

exports[`PostBodyAdditionalContent with a permalinklink Render permalink preview with no data 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
  </div>
</div>
`;

exports[`PostBodyAdditionalContent with an image preview should render correctly 1`] = `
<div>
  <div>
    <button
      aria-label="Toggle Embed Visibility"
      class="style--none post__embed-visibility color--link pull-left"
      data-expanded="true"
    />
    <span>
      some children
    </span>
    <div
      data-image-metadata="present"
      data-testid="post-image"
    />
  </div>
</div>
`;

exports[`PostBodyAdditionalContent with an image preview should render the toggle after a message containing more than just a link 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
    <button
      aria-label="Toggle Embed Visibility"
      class="style--none post__embed-visibility color--link "
      data-expanded="true"
    />
    <div
      data-image-metadata="present"
      data-testid="post-image"
    />
  </div>
</div>
`;

exports[`PostBodyAdditionalContent with an opengraph preview should render correctly 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
    <div
      data-testid="post-attachment-opengraph"
    />
  </div>
</div>
`;

exports[`PostBodyAdditionalContent with an opengraph preview should render the toggle after a message containing more than just a link 1`] = `
<div>
  <div>
    <span>
      some children
    </span>
    <div
      data-testid="post-attachment-opengraph"
    />
  </div>
</div>
`;
